src/objects/Opportunity_Swarm_Rule__c.object
<CustomObject>
    <description>Chatterで、商談を自動フォローさせる公開グループのルールを示す。</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>自動フォロールール</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Id__c</fullName>
        <label>公開グループID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <label>商談金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>商談フェーズ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>商談種別</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>タイプ</label>
        <picklist>
            <picklistValues>
                <fullName>全ての商談</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>自分が所有している商談</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>指定する金額以上の商談</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>指定するフェーズの商談</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>指定する種別の商談</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>商談自動フォロールール</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OSR-{0000}</displayFormat>
        <label>商談自動フォロールールID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>商談自動フォロールール</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>